--- a/site/blueprints/fields/header_content.yml
+++ b/site/blueprints/fields/header_content.yml
@@ -10,7 +10,7 @@ fields:
     max: 1
     layout: cards
     uploads:
-      parent: page.images
+      parent: page
       accept:
         extension: [jpg, jpeg, png, webp]
 
