--- a/site/blueprints/pages/seite.yml
+++ b/site/blueprints/pages/seite.yml
@@ -18,7 +18,7 @@ columns:
             max: 1
             layout: cards
             uploads:
-              parent: page.images
+              parent: page
               accept:
                 extension: [jpg, jpeg, png, webp]
 
