Added further stuff

--- a/site/blueprints/pages/aktivitaeten.yml
+++ b/site/blueprints/pages/aktivitaeten.yml
@@ -24,6 +24,7 @@ columns:
             fieldsets:
               - one_col
               - two_col
+              - three_col
   
   sidebar:
     width: 1/3
