--- a/site/plugins/pfimba/blueprints/blocks/three_col.yml
+++ b/site/plugins/pfimba/blueprints/blocks/three_col.yml
@@ -1,5 +1,5 @@
-type: two_col
-title: Zwei Spalten
+type: three_col
+title: Drei Spalten
 preview: fields
 wysiwyg: true
 fields:
@@ -7,7 +7,19 @@ fields:
     label: Linker Spalteninhalt
     type: blocks
     max: 1
-    width: 1/2
+    width: 1/3
+    fieldsets:
+      - aktivitaet
+      - leiter
+      - anlass
+      - google_fotos
+      - beitrag
+
+  content_center:
+    label: Rechter Spalteninhalt
+    type: blocks
+    max: 1
+    width: 1/3
     fieldsets:
       - aktivitaet
       - leiter
@@ -19,7 +31,7 @@ fields:
     label: Rechter Spalteninhalt
     type: blocks
     max: 1
-    width: 1/2
+    width: 1/3
     fieldsets:
       - aktivitaet
       - leiter
